webapp1-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp1-svc
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: webapp-1
