webapp2-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp2-svc
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: webapp-2
