webapp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webapp-ingress
spec:
  rules:
  - http:
      paths:
      - path: /app1
        backend:
          serviceName: webapp1-svc
          servicePort: 80
      - path: /app2
        backend:
          serviceName: webapp2-svc
          servicePort: 80
